# frblip

./: .gitignore  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt  requirements.txt~  setup.cfg  setup.py  setup.py~
docs/: index.md
examples/: quick_start.ipynb
frblip/: __init__.py  basic_sampler.py  cosmic_bursts.py  cosmology.py  cosmology.py~  decorators.py  dispersion.py  fast_radio_bursts.py  fast_radio_bursts.py~  frb.py  grid.py  healpix.py  healpix.py~  observation.py  observation.py~  observed_bursts.py  pattern.py  pattern.py~  patterns.py  radio_telescope.py  sensitivity_map.py  survey.py  utils.py  uvgrid.py
frblip/data/: HostGalaxyDM.csv  bingo.npz  bingo.pkl  bingo_high.npz  bingo_low.npz  luo18_host.csv  mirror_30m.pkl  mirror_40m.pkl  mirror_4m.pkl  mirror_5m.pkl  mirror_6m.pkl  naked_horn.pkl  ne2001map128.npy  ne2001map64.npy  outrigger_1.npz  outrigger_2.npz  outrigger_3.npz  outrigger_4.npz  phased_array_30m.pkl  phased_array_40m.pkl  phased_array_4m.pkl  phased_array_5m.pkl  phased_array_6m.pkl  single_horn.npz  single_horn_1.npz  single_horn_2.npz  single_horn_3.npz  spec_idx.csv
frblip/dispersion_measure/: __init__.py  __init__.py~  galactic.py  galactic.py~  igm.py  igm.py~
frblip/distributions/: __init__.py  redshift.py  redshift.py~  schechter.py
frblip/random/: __init__.py  mixture.py  redshift.py  schechter.py  spectral_index.py
frblip/random/dispersion_measure/: __init__.py  galactic.py  host.py  igm.py
frblip/sparse_quantity/: __init__.py  sparse_quantity.py
